# NotesApp

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
Writerside/: in.tree
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-12-20-165555_users/: up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/data/: db.rs  dtos.rs  mod.rs
backend/src/errors/: mod.rs
backend/src/handler/: auth.rs
backend/src/mail/: mails.rs  mod.rs  sendmail.rs
backend/src/mail/templates/: RestPassword-email.html  Verification-email.html  Welcome-email.html
backend/src/middleware/: auth.rs
backend/src/models/: users.rs
backend/src/utils/: config.rs  mod.rs  password.rs  token.rs
docs/: setup.md
